--- a/notebooks/fitbit-eda.ipynb
+++ b/notebooks/fitbit-eda.ipynb
@@ -9,7 +9,8 @@
     "\n",
     "Assumes that environment variables have been defined for locating 'weight-*.json' files. See the `.env.example` file for guidance.\n",
     "\n",
-    "- GLOBAL_EXPORT_DATA_DIR : Path to the 'Global Export Data' directory.\n",
+    "- GLOBAL_EXPORT_DATA_DIR_NAME : Path to the 'Global Export Data' directory, which contains files exported from a Fitbit account.\n",
+    "- CLEAN_DATA_DIR_NAME : Path to the directory where clean parquet files are saved.\n",
     "- WEIGHT_FILE_PREFIX : Part of a file name that identifies the file as weight data, e.g. 'weight-'.\n",
     "- WEIGHT_FILE_SUFFIX : File type suffix, e.g. '.json'."
    ]
@@ -37,6 +38,7 @@
     "# Path to Global Export Data directory\n",
     "load_dotenv()\n",
     "GLOBAL_EXPORT_DATA_DIR_NAME = os.getenv('GLOBAL_EXPORT_DATA_DIR_NAME')\n",
+    "CLEAN_DATA_DIR_NAME = os.getenv('CLEAN_DATA_DIR_NAME')\n",
     "WEIGHT_FILE_PREFIX = os.getenv('WEIGHT_FILE_PREFIX', default='weight-')\n",
     "WEIGHT_FILE_SUFFIX = os.getenv('WEIGHT_FILE_SUFFIX', default='.json')\n",
     "sample_monthly_weight_file_name = f\"{WEIGHT_FILE_PREFIX}2024-07-20{WEIGHT_FILE_SUFFIX}\""
@@ -175,10 +177,10 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>logId</th><th>weight</th><th>bmi</th><th>date</th><th>time</th><th>source</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>1628294399000</td><td>242.0</td><td>30.25</td><td>&quot;08/06/21&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1718927999000</td><td>223.2</td><td>27.9</td><td>&quot;06/20/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719187199000</td><td>223.0</td><td>27.87</td><td>&quot;06/23/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719273599000</td><td>224.0</td><td>28.0</td><td>&quot;06/24/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719359999000</td><td>223.8</td><td>27.97</td><td>&quot;06/25/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (341, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>logId</th><th>weight</th><th>bmi</th><th>date</th><th>time</th><th>source</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>1628294399000</td><td>242.0</td><td>30.25</td><td>&quot;08/06/21&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1718927999000</td><td>223.2</td><td>27.9</td><td>&quot;06/20/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719187199000</td><td>223.0</td><td>27.87</td><td>&quot;06/23/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719273599000</td><td>224.0</td><td>28.0</td><td>&quot;06/24/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719359999000</td><td>223.8</td><td>27.97</td><td>&quot;06/25/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1710719999000</td><td>225.0</td><td>28.12</td><td>&quot;03/17/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710806399000</td><td>225.2</td><td>28.15</td><td>&quot;03/18/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710892799000</td><td>225.8</td><td>28.22</td><td>&quot;03/19/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710979199000</td><td>228.6</td><td>28.57</td><td>&quot;03/20/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1711065599000</td><td>227.0</td><td>28.37</td><td>&quot;03/21/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (5, 6)\n",
+       "shape: (341, 6)\n",
        "┌───────────────┬────────┬───────┬──────────┬──────────┬────────┐\n",
        "│ logId         ┆ weight ┆ bmi   ┆ date     ┆ time     ┆ source │\n",
        "│ ---           ┆ ---    ┆ ---   ┆ ---      ┆ ---      ┆ ---    │\n",
@@ -189,6 +191,12 @@
        "│ 1719187199000 ┆ 223.0  ┆ 27.87 ┆ 06/23/24 ┆ 23:59:59 ┆ API    │\n",
        "│ 1719273599000 ┆ 224.0  ┆ 28.0  ┆ 06/24/24 ┆ 23:59:59 ┆ API    │\n",
        "│ 1719359999000 ┆ 223.8  ┆ 27.97 ┆ 06/25/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ …             ┆ …      ┆ …     ┆ …        ┆ …        ┆ …      │\n",
+       "│ 1710719999000 ┆ 225.0  ┆ 28.12 ┆ 03/17/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ 1710806399000 ┆ 225.2  ┆ 28.15 ┆ 03/18/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ 1710892799000 ┆ 225.8  ┆ 28.22 ┆ 03/19/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ 1710979199000 ┆ 228.6  ┆ 28.57 ┆ 03/20/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ 1711065599000 ┆ 227.0  ┆ 28.37 ┆ 03/21/24 ┆ 23:59:59 ┆ API    │\n",
        "└───────────────┴────────┴───────┴──────────┴──────────┴────────┘"
       ]
      },
@@ -198,13 +206,90 @@
     }
    ],
    "source": [
-    "df.head(5)"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e141d5fb-4121-47dd-8743-cedbcde4a5f0",
+   "metadata": {},
+   "source": [
+    "## Writes the Dataframe to a Parquet file for future use."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64581ee5-080a-46f5-9003-054855d1707b",
+   "id": "b1d3c5f8-c981-4a16-bcbd-aaca74b2c188",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CLEAN_DATA_DIR_NAME='/Users/jimtyhurst/Dropbox/sync/data-sync/fitbit/takeout-20240906T231211Z-001/cleaned_data'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f\"{CLEAN_DATA_DIR_NAME=}\")\n",
+    "type(CLEAN_DATA_DIR_NAME)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f14894e5-8da4-4f92-bec2-527856213da6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.write_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fa13ebb-776c-425a-85ff-4dfcc7a78af3",
+   "metadata": {},
+   "source": [
+    "## Reads from Parquet file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3da6f90e-a138-4d9f-9a3d-729999874ca5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(341, 6)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pl.read_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8a979ebd-818b-4985-84ee-87bf05b06e1f",
    "metadata": {},
    "outputs": [
     {
@@ -217,15 +302,21 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>logId</th><th>weight</th><th>bmi</th><th>date</th><th>time</th><th>source</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>1710719999000</td><td>225.0</td><td>28.12</td><td>&quot;03/17/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710806399000</td><td>225.2</td><td>28.15</td><td>&quot;03/18/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710892799000</td><td>225.8</td><td>28.22</td><td>&quot;03/19/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710979199000</td><td>228.6</td><td>28.57</td><td>&quot;03/20/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1711065599000</td><td>227.0</td><td>28.37</td><td>&quot;03/21/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (341, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>logId</th><th>weight</th><th>bmi</th><th>date</th><th>time</th><th>source</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>1628294399000</td><td>242.0</td><td>30.25</td><td>&quot;08/06/21&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1718927999000</td><td>223.2</td><td>27.9</td><td>&quot;06/20/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719187199000</td><td>223.0</td><td>27.87</td><td>&quot;06/23/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719273599000</td><td>224.0</td><td>28.0</td><td>&quot;06/24/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719359999000</td><td>223.8</td><td>27.97</td><td>&quot;06/25/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1710719999000</td><td>225.0</td><td>28.12</td><td>&quot;03/17/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710806399000</td><td>225.2</td><td>28.15</td><td>&quot;03/18/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710892799000</td><td>225.8</td><td>28.22</td><td>&quot;03/19/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710979199000</td><td>228.6</td><td>28.57</td><td>&quot;03/20/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1711065599000</td><td>227.0</td><td>28.37</td><td>&quot;03/21/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (5, 6)\n",
+       "shape: (341, 6)\n",
        "┌───────────────┬────────┬───────┬──────────┬──────────┬────────┐\n",
        "│ logId         ┆ weight ┆ bmi   ┆ date     ┆ time     ┆ source │\n",
        "│ ---           ┆ ---    ┆ ---   ┆ ---      ┆ ---      ┆ ---    │\n",
        "│ i64           ┆ f64    ┆ f64   ┆ str      ┆ str      ┆ str    │\n",
        "╞═══════════════╪════════╪═══════╪══════════╪══════════╪════════╡\n",
+       "│ 1628294399000 ┆ 242.0  ┆ 30.25 ┆ 08/06/21 ┆ 23:59:59 ┆ API    │\n",
+       "│ 1718927999000 ┆ 223.2  ┆ 27.9  ┆ 06/20/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ 1719187199000 ┆ 223.0  ┆ 27.87 ┆ 06/23/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ 1719273599000 ┆ 224.0  ┆ 28.0  ┆ 06/24/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ 1719359999000 ┆ 223.8  ┆ 27.97 ┆ 06/25/24 ┆ 23:59:59 ┆ API    │\n",
+       "│ …             ┆ …      ┆ …     ┆ …        ┆ …        ┆ …      │\n",
        "│ 1710719999000 ┆ 225.0  ┆ 28.12 ┆ 03/17/24 ┆ 23:59:59 ┆ API    │\n",
        "│ 1710806399000 ┆ 225.2  ┆ 28.15 ┆ 03/18/24 ┆ 23:59:59 ┆ API    │\n",
        "│ 1710892799000 ┆ 225.8  ┆ 28.22 ┆ 03/19/24 ┆ 23:59:59 ┆ API    │\n",
@@ -234,19 +325,19 @@
        "└───────────────┴────────┴───────┴──────────┴──────────┴────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.tail(5)"
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07fdfb2c-0090-4984-8f61-2f246728888d",
+   "id": "07921aac-d219-4175-b424-f698f6677354",
    "metadata": {},
    "outputs": [],
    "source": []
