Started exploratory data analysis of weight files.

--- a/notebooks/fitbit-weight-eda.ipynb
+++ b/notebooks/fitbit-weight-eda.ipynb
@@ -125,44 +125,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "91aa9543-85ed-4fa2-ae53-456b416a6ccf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (1, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>logId</th><th>weight</th><th>bmi</th><th>date</th><th>time</th><th>source</th></tr><tr><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td><td>u32</td></tr></thead><tbody><tr><td>341</td><td>341</td><td>341</td><td>341</td><td>341</td><td>341</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (1, 6)\n",
-       "┌───────┬────────┬─────┬──────┬──────┬────────┐\n",
-       "│ logId ┆ weight ┆ bmi ┆ date ┆ time ┆ source │\n",
-       "│ ---   ┆ ---    ┆ --- ┆ ---  ┆ ---  ┆ ---    │\n",
-       "│ u32   ┆ u32    ┆ u32 ┆ u32  ┆ u32  ┆ u32    │\n",
-       "╞═══════╪════════╪═════╪══════╪══════╪════════╡\n",
-       "│ 341   ┆ 341    ┆ 341 ┆ 341  ┆ 341  ┆ 341    │\n",
-       "└───────┴────────┴─────┴──────┴──────┴────────┘"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "5e61f63a-2020-476b-b27c-1c2428053f1a",
    "metadata": {},
@@ -211,6 +173,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "532d50b6-6528-4a85-a009-ce77ce409aaa",
+   "metadata": {},
+   "source": [
+    "## Clean the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fb301822-3c4c-40d2-a957-1f356455d0b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Only keep the first weight measurement per day.\n",
+    "df = \\\n",
+    "  df.sort(['date', 'time']) \\\n",
+    "  .unique(subset=['date'], keep='first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6358f325-1fd4-44a9-b493-f485831b15bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(339, 6)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e141d5fb-4121-47dd-8743-cedbcde4a5f0",
    "metadata": {},
    "source": [
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "b1d3c5f8-c981-4a16-bcbd-aaca74b2c188",
    "metadata": {},
    "outputs": [
@@ -236,7 +240,7 @@
        "str"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "f14894e5-8da4-4f92-bec2-527856213da6",
    "metadata": {},
    "outputs": [],
@@ -266,78 +270,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "3da6f90e-a138-4d9f-9a3d-729999874ca5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(341, 6)"
+       "(339, 6)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pl.read_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))\n",
-    "df.shape"
+    "df_persisted = pl.read_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))\n",
+    "df_persisted.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "8a979ebd-818b-4985-84ee-87bf05b06e1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (341, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>logId</th><th>weight</th><th>bmi</th><th>date</th><th>time</th><th>source</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>1628294399000</td><td>242.0</td><td>30.25</td><td>&quot;08/06/21&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1718927999000</td><td>223.2</td><td>27.9</td><td>&quot;06/20/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719187199000</td><td>223.0</td><td>27.87</td><td>&quot;06/23/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719273599000</td><td>224.0</td><td>28.0</td><td>&quot;06/24/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1719359999000</td><td>223.8</td><td>27.97</td><td>&quot;06/25/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1710719999000</td><td>225.0</td><td>28.12</td><td>&quot;03/17/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710806399000</td><td>225.2</td><td>28.15</td><td>&quot;03/18/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710892799000</td><td>225.8</td><td>28.22</td><td>&quot;03/19/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1710979199000</td><td>228.6</td><td>28.57</td><td>&quot;03/20/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr><tr><td>1711065599000</td><td>227.0</td><td>28.37</td><td>&quot;03/21/24&quot;</td><td>&quot;23:59:59&quot;</td><td>&quot;API&quot;</td></tr></tbody></table></div>"
-      ],
       "text/plain": [
-       "shape: (341, 6)\n",
-       "┌───────────────┬────────┬───────┬──────────┬──────────┬────────┐\n",
-       "│ logId         ┆ weight ┆ bmi   ┆ date     ┆ time     ┆ source │\n",
-       "│ ---           ┆ ---    ┆ ---   ┆ ---      ┆ ---      ┆ ---    │\n",
-       "│ i64           ┆ f64    ┆ f64   ┆ str      ┆ str      ┆ str    │\n",
-       "╞═══════════════╪════════╪═══════╪══════════╪══════════╪════════╡\n",
-       "│ 1628294399000 ┆ 242.0  ┆ 30.25 ┆ 08/06/21 ┆ 23:59:59 ┆ API    │\n",
-       "│ 1718927999000 ┆ 223.2  ┆ 27.9  ┆ 06/20/24 ┆ 23:59:59 ┆ API    │\n",
-       "│ 1719187199000 ┆ 223.0  ┆ 27.87 ┆ 06/23/24 ┆ 23:59:59 ┆ API    │\n",
-       "│ 1719273599000 ┆ 224.0  ┆ 28.0  ┆ 06/24/24 ┆ 23:59:59 ┆ API    │\n",
-       "│ 1719359999000 ┆ 223.8  ┆ 27.97 ┆ 06/25/24 ┆ 23:59:59 ┆ API    │\n",
-       "│ …             ┆ …      ┆ …     ┆ …        ┆ …        ┆ …      │\n",
-       "│ 1710719999000 ┆ 225.0  ┆ 28.12 ┆ 03/17/24 ┆ 23:59:59 ┆ API    │\n",
-       "│ 1710806399000 ┆ 225.2  ┆ 28.15 ┆ 03/18/24 ┆ 23:59:59 ┆ API    │\n",
-       "│ 1710892799000 ┆ 225.8  ┆ 28.22 ┆ 03/19/24 ┆ 23:59:59 ┆ API    │\n",
-       "│ 1710979199000 ┆ 228.6  ┆ 28.57 ┆ 03/20/24 ┆ 23:59:59 ┆ API    │\n",
-       "│ 1711065599000 ┆ 227.0  ┆ 28.37 ┆ 03/21/24 ┆ 23:59:59 ┆ API    │\n",
-       "└───────────────┴────────┴───────┴──────────┴──────────┴────────┘"
+       "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.equals(df_persisted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8d7f202-9247-4dfc-8327-1f7ab9035494",
+   "metadata": {},
+   "source": [
+    "## Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "179fa4c5-3f59-4785-b853-0ef21d84c1ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07921aac-d219-4175-b424-f698f6677354",
+   "id": "2fc49f4c-be0f-4432-876d-effb044039a4",
    "metadata": {},
    "outputs": [],
    "source": []
