Reads weight data from file into a Polars DataFrame.

--- a/notebooks/fitbit-weight-eda.ipynb
+++ b/notebooks/fitbit-weight-eda.ipynb
@@ -17,14 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "061d187c-9ae6-4f05-b969-4238345e938f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "from pathlib import Path\n",
     "import polars as pl"
    ]
   },
@@ -37,10 +36,10 @@
    "source": [
     "# Path to Global Export Data directory\n",
     "load_dotenv()\n",
-    "GLOBAL_EXPORT_DATA_DIR_NAME = os.getenv('GLOBAL_EXPORT_DATA_DIR_NAME')\n",
-    "CLEAN_DATA_DIR_NAME = os.getenv('CLEAN_DATA_DIR_NAME')\n",
-    "WEIGHT_FILE_PREFIX = os.getenv('WEIGHT_FILE_PREFIX', default='weight-')\n",
-    "WEIGHT_FILE_SUFFIX = os.getenv('WEIGHT_FILE_SUFFIX', default='.json')\n",
+    "GLOBAL_EXPORT_DATA_DIR_NAME = os.getenv(\"GLOBAL_EXPORT_DATA_DIR_NAME\")\n",
+    "CLEAN_DATA_DIR_NAME = os.getenv(\"CLEAN_DATA_DIR_NAME\")\n",
+    "WEIGHT_FILE_PREFIX = os.getenv(\"WEIGHT_FILE_PREFIX\", default=\"weight-\")\n",
+    "WEIGHT_FILE_SUFFIX = os.getenv(\"WEIGHT_FILE_SUFFIX\", default=\".json\")\n",
     "sample_monthly_weight_file_name = f\"{WEIGHT_FILE_PREFIX}2024-07-20{WEIGHT_FILE_SUFFIX}\""
    ]
   },
@@ -84,7 +83,9 @@
     }
    ],
    "source": [
-    "df = pl.read_json(os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, sample_monthly_weight_file_name))\n",
+    "df = pl.read_json(\n",
+    "    os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, sample_monthly_weight_file_name)\n",
+    ")\n",
     "print(df)"
    ]
   },
@@ -117,8 +118,14 @@
     "df = None\n",
     "with os.scandir(GLOBAL_EXPORT_DATA_DIR_NAME) as ged_dir_entries:\n",
     "    for entry in ged_dir_entries:\n",
-    "        if entry.name.startswith(WEIGHT_FILE_PREFIX) and entry.name.endswith(WEIGHT_FILE_SUFFIX) and entry.is_file():\n",
-    "            entry_as_df = pl.read_json(os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, entry.name))\n",
+    "        if (\n",
+    "            entry.name.startswith(WEIGHT_FILE_PREFIX)\n",
+    "            and entry.name.endswith(WEIGHT_FILE_SUFFIX)\n",
+    "            and entry.is_file()\n",
+    "        ):\n",
+    "            entry_as_df = pl.read_json(\n",
+    "                os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, entry.name)\n",
+    "            )\n",
     "            df = entry_as_df if df is None else df.vstack(entry_as_df)\n",
     "df.shape"
    ]
@@ -187,9 +194,7 @@
    "outputs": [],
    "source": [
     "# Only keep the first weight measurement per day.\n",
-    "df = \\\n",
-    "  df.sort(['date', 'time']) \\\n",
-    "  .unique(subset=['date'], keep='first')"
+    "df = df.sort([\"date\", \"time\"]).unique(subset=[\"date\"], keep=\"first\")"
    ]
   },
   {
@@ -257,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.write_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))"
+    "df.write_parquet(os.path.join(CLEAN_DATA_DIR_NAME, \"weight.parquet\"))"
    ]
   },
   {
@@ -286,7 +291,7 @@
     }
    ],
    "source": [
-    "df_persisted = pl.read_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))\n",
+    "df_persisted = pl.read_parquet(os.path.join(CLEAN_DATA_DIR_NAME, \"weight.parquet\"))\n",
     "df_persisted.shape"
    ]
   },
