Changed ruff format rule to use single quotes.

--- a/notebooks/fitbit-weight-eda.ipynb
+++ b/notebooks/fitbit-weight-eda.ipynb
@@ -36,11 +36,11 @@
    "source": [
     "# Path to Global Export Data directory\n",
     "load_dotenv()\n",
-    "GLOBAL_EXPORT_DATA_DIR_NAME = os.getenv(\"GLOBAL_EXPORT_DATA_DIR_NAME\")\n",
-    "CLEAN_DATA_DIR_NAME = os.getenv(\"CLEAN_DATA_DIR_NAME\")\n",
-    "WEIGHT_FILE_PREFIX = os.getenv(\"WEIGHT_FILE_PREFIX\", default=\"weight-\")\n",
-    "WEIGHT_FILE_SUFFIX = os.getenv(\"WEIGHT_FILE_SUFFIX\", default=\".json\")\n",
-    "sample_monthly_weight_file_name = f\"{WEIGHT_FILE_PREFIX}2024-07-20{WEIGHT_FILE_SUFFIX}\""
+    "GLOBAL_EXPORT_DATA_DIR_NAME = os.getenv('GLOBAL_EXPORT_DATA_DIR_NAME')\n",
+    "CLEAN_DATA_DIR_NAME = os.getenv('CLEAN_DATA_DIR_NAME')\n",
+    "WEIGHT_FILE_PREFIX = os.getenv('WEIGHT_FILE_PREFIX', default='weight-')\n",
+    "WEIGHT_FILE_SUFFIX = os.getenv('WEIGHT_FILE_SUFFIX', default='.json')\n",
+    "sample_monthly_weight_file_name = f'{WEIGHT_FILE_PREFIX}2024-07-20{WEIGHT_FILE_SUFFIX}'"
    ]
   },
   {
@@ -83,9 +83,7 @@
     }
    ],
    "source": [
-    "df = pl.read_json(\n",
-    "    os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, sample_monthly_weight_file_name)\n",
-    ")\n",
+    "df = pl.read_json(os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, sample_monthly_weight_file_name))\n",
     "print(df)"
    ]
   },
@@ -123,9 +121,7 @@
     "            and entry.name.endswith(WEIGHT_FILE_SUFFIX)\n",
     "            and entry.is_file()\n",
     "        ):\n",
-    "            entry_as_df = pl.read_json(\n",
-    "                os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, entry.name)\n",
-    "            )\n",
+    "            entry_as_df = pl.read_json(os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, entry.name))\n",
     "            df = entry_as_df if df is None else df.vstack(entry_as_df)\n",
     "df.shape"
    ]
@@ -194,7 +190,7 @@
    "outputs": [],
    "source": [
     "# Only keep the first weight measurement per day.\n",
-    "df = df.sort([\"date\", \"time\"]).unique(subset=[\"date\"], keep=\"first\")"
+    "df = df.sort(['date', 'time']).unique(subset=['date'], keep='first')"
    ]
   },
   {
@@ -251,7 +247,7 @@
     }
    ],
    "source": [
-    "print(f\"{CLEAN_DATA_DIR_NAME=}\")\n",
+    "print(f'{CLEAN_DATA_DIR_NAME=}')\n",
     "type(CLEAN_DATA_DIR_NAME)"
    ]
   },
@@ -262,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.write_parquet(os.path.join(CLEAN_DATA_DIR_NAME, \"weight.parquet\"))"
+    "df.write_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))"
    ]
   },
   {
@@ -291,7 +287,7 @@
     }
    ],
    "source": [
-    "df_persisted = pl.read_parquet(os.path.join(CLEAN_DATA_DIR_NAME, \"weight.parquet\"))\n",
+    "df_persisted = pl.read_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))\n",
     "df_persisted.shape"
    ]
   },
