(1) Enhanced Jupyter instructions to include setting up '.env' file. (2) Uses pathlib Path, rather than os.path in Jupyter notebook for consistency with package code.

--- a/notebooks/fitbit-weight-eda.ipynb
+++ b/notebooks/fitbit-weight-eda.ipynb
@@ -17,13 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "061d187c-9ae6-4f05-b969-4238345e938f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
+    "from pathlib import Path\n",
     "import polars as pl"
    ]
   },
@@ -83,7 +84,7 @@
     }
    ],
    "source": [
-    "df = pl.read_json(os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, sample_monthly_weight_file_name))\n",
+    "df = pl.read_json(Path(GLOBAL_EXPORT_DATA_DIR_NAME).joinpath(sample_monthly_weight_file_name))\n",
     "print(df)"
    ]
   },
@@ -114,21 +115,20 @@
    ],
    "source": [
     "df = None\n",
-    "with os.scandir(GLOBAL_EXPORT_DATA_DIR_NAME) as ged_dir_entries:\n",
-    "    for entry in ged_dir_entries:\n",
-    "        if (\n",
-    "            entry.name.startswith(WEIGHT_FILE_PREFIX)\n",
-    "            and entry.name.endswith(WEIGHT_FILE_SUFFIX)\n",
-    "            and entry.is_file()\n",
-    "        ):\n",
-    "            entry_as_df = pl.read_json(os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, entry.name))\n",
-    "            df = entry_as_df if df is None else df.vstack(entry_as_df)\n",
+    "for entry in Path(GLOBAL_EXPORT_DATA_DIR_NAME).iterdir():\n",
+    "    if (\n",
+    "        entry.name.startswith(WEIGHT_FILE_PREFIX)\n",
+    "        and entry.name.endswith(WEIGHT_FILE_SUFFIX)\n",
+    "        and entry.is_file()\n",
+    "    ):\n",
+    "        entry_as_df = pl.read_json(os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, entry.name))\n",
+    "        df = entry_as_df if df is None else df.vstack(entry_as_df)\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5e61f63a-2020-476b-b27c-1c2428053f1a",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "└───────────────┴────────┴───────┴──────────┴──────────┴────────┘"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "fb301822-3c4c-40d2-a957-1f356455d0b8",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "6358f325-1fd4-44a9-b493-f485831b15bc",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "(339, 6)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "b1d3c5f8-c981-4a16-bcbd-aaca74b2c188",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "str"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,12 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "f14894e5-8da4-4f92-bec2-527856213da6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.write_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))"
+    "df.write_parquet(Path(CLEAN_DATA_DIR_NAME).joinpath('weight.parquet'))"
    ]
   },
   {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "3da6f90e-a138-4d9f-9a3d-729999874ca5",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "(339, 6)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "8a979ebd-818b-4985-84ee-87bf05b06e1f",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "179fa4c5-3f59-4785-b853-0ef21d84c1ab",
    "metadata": {},
    "outputs": [],
@@ -341,9 +341,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fitbit-dashboard",
+   "display_name": "fitbit_data_viewer",
    "language": "python",
-   "name": "fitbit-dashboard"
+   "name": "fitbit_data_viewer"
   },
   "language_info": {
    "codemirror_mode": {
