--- a/notebooks/fitbit-weight-eda.ipynb
+++ b/notebooks/fitbit-weight-eda.ipynb
@@ -41,7 +41,9 @@
     "CLEAN_DATA_DIR_NAME = os.getenv('CLEAN_DATA_DIR_NAME')\n",
     "WEIGHT_FILE_PREFIX = os.getenv('WEIGHT_FILE_PREFIX', default='weight-')\n",
     "WEIGHT_FILE_SUFFIX = os.getenv('WEIGHT_FILE_SUFFIX', default='.json')\n",
-    "sample_monthly_weight_file_name = f'{WEIGHT_FILE_PREFIX}2024-07-20{WEIGHT_FILE_SUFFIX}'"
+    "sample_monthly_weight_file_name = (\n",
+    "    f'{WEIGHT_FILE_PREFIX}2024-07-20{WEIGHT_FILE_SUFFIX}'\n",
+    ")"
    ]
   },
   {
@@ -84,7 +86,9 @@
     }
    ],
    "source": [
-    "df = pl.read_json(Path(GLOBAL_EXPORT_DATA_DIR_NAME).joinpath(sample_monthly_weight_file_name))\n",
+    "df = pl.read_json(\n",
+    "    Path(GLOBAL_EXPORT_DATA_DIR_NAME).joinpath(sample_monthly_weight_file_name)\n",
+    ")\n",
     "print(df)"
    ]
   },
@@ -121,7 +125,9 @@
     "        and entry.name.endswith(WEIGHT_FILE_SUFFIX)\n",
     "        and entry.is_file()\n",
     "    ):\n",
-    "        entry_as_df = pl.read_json(os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, entry.name))\n",
+    "        entry_as_df = pl.read_json(\n",
+    "            os.path.join(GLOBAL_EXPORT_DATA_DIR_NAME, entry.name)\n",
+    "        )\n",
     "        df = entry_as_df if df is None else df.vstack(entry_as_df)\n",
     "df.shape"
    ]
@@ -287,7 +293,9 @@
     }
    ],
    "source": [
-    "df_persisted = pl.read_parquet(os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet'))\n",
+    "df_persisted = pl.read_parquet(\n",
+    "    os.path.join(CLEAN_DATA_DIR_NAME, 'weight.parquet')\n",
+    ")\n",
     "df_persisted.shape"
    ]
   },
