Prepared data for plot.

--- a/notebooks/fitbit-weight-eda.ipynb
+++ b/notebooks/fitbit-weight-eda.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "# Path to Global Export Data directory\n",
-    "load_dotenv()\n",
+    "_ = load_dotenv()\n",
     "GLOBAL_EXPORT_DATA_DIR_NAME = os.getenv('GLOBAL_EXPORT_DATA_DIR_NAME')\n",
     "CLEAN_DATA_DIR_NAME = os.getenv('CLEAN_DATA_DIR_NAME')\n",
     "WEIGHT_FILE_PREFIX = os.getenv('WEIGHT_FILE_PREFIX', default='weight-')\n",
@@ -221,6 +221,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e58841da-7df2-430b-a25d-3a028d923b70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (339, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>weight</th><th>bmi</th><th>date</th><th>weight_units</th></tr><tr><td>f64</td><td>f64</td><td>date</td><td>str</td></tr></thead><tbody><tr><td>219.0</td><td>27.37</td><td>2016-12-30</td><td>&quot;pounds&quot;</td></tr><tr><td>223.0</td><td>27.87</td><td>2017-08-06</td><td>&quot;pounds&quot;</td></tr><tr><td>228.0</td><td>28.5</td><td>2018-08-08</td><td>&quot;pounds&quot;</td></tr><tr><td>222.0</td><td>27.75</td><td>2019-08-06</td><td>&quot;pounds&quot;</td></tr><tr><td>235.0</td><td>29.37</td><td>2020-08-06</td><td>&quot;pounds&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>220.4</td><td>27.55</td><td>2024-09-02</td><td>&quot;pounds&quot;</td></tr><tr><td>225.2</td><td>28.15</td><td>2024-09-03</td><td>&quot;pounds&quot;</td></tr><tr><td>224.6</td><td>28.07</td><td>2024-09-04</td><td>&quot;pounds&quot;</td></tr><tr><td>222.2</td><td>27.77</td><td>2024-09-05</td><td>&quot;pounds&quot;</td></tr><tr><td>220.6</td><td>27.57</td><td>2024-09-06</td><td>&quot;pounds&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (339, 4)\n",
+       "┌────────┬───────┬────────────┬──────────────┐\n",
+       "│ weight ┆ bmi   ┆ date       ┆ weight_units │\n",
+       "│ ---    ┆ ---   ┆ ---        ┆ ---          │\n",
+       "│ f64    ┆ f64   ┆ date       ┆ str          │\n",
+       "╞════════╪═══════╪════════════╪══════════════╡\n",
+       "│ 219.0  ┆ 27.37 ┆ 2016-12-30 ┆ pounds       │\n",
+       "│ 223.0  ┆ 27.87 ┆ 2017-08-06 ┆ pounds       │\n",
+       "│ 228.0  ┆ 28.5  ┆ 2018-08-08 ┆ pounds       │\n",
+       "│ 222.0  ┆ 27.75 ┆ 2019-08-06 ┆ pounds       │\n",
+       "│ 235.0  ┆ 29.37 ┆ 2020-08-06 ┆ pounds       │\n",
+       "│ …      ┆ …     ┆ …          ┆ …            │\n",
+       "│ 220.4  ┆ 27.55 ┆ 2024-09-02 ┆ pounds       │\n",
+       "│ 225.2  ┆ 28.15 ┆ 2024-09-03 ┆ pounds       │\n",
+       "│ 224.6  ┆ 28.07 ┆ 2024-09-04 ┆ pounds       │\n",
+       "│ 222.2  ┆ 27.77 ┆ 2024-09-05 ┆ pounds       │\n",
+       "│ 220.6  ┆ 27.57 ┆ 2024-09-06 ┆ pounds       │\n",
+       "└────────┴───────┴────────────┴──────────────┘"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert date as string to date object.\n",
+    "df = (\n",
+    "    df\n",
+    "    .with_columns(\n",
+    "        pl.col('date').str.to_date(\"%m/%d/%y\")\n",
+    "    )\n",
+    "    .drop(['time', 'logId', 'source'])\n",
+    "    .with_columns(\n",
+    "        pl.lit(\"pounds\").alias(\"weight_units\")\n",
+    "    )\n",
+    "    .sort('date')\n",
+    ")\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e141d5fb-4121-47dd-8743-cedbcde4a5f0",
    "metadata": {},
@@ -230,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b1d3c5f8-c981-4a16-bcbd-aaca74b2c188",
    "metadata": {},
    "outputs": [
@@ -247,7 +307,7 @@
        "str"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f14894e5-8da4-4f92-bec2-527856213da6",
    "metadata": {},
    "outputs": [],
@@ -277,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3da6f90e-a138-4d9f-9a3d-729999874ca5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(339, 6)"
+       "(339, 4)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "8a979ebd-818b-4985-84ee-87bf05b06e1f",
    "metadata": {},
    "outputs": [
@@ -311,7 +371,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "179fa4c5-3f59-4785-b853-0ef21d84c1ab",
    "metadata": {},
    "outputs": [],
@@ -340,8 +400,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "823d29f5-361d-427b-8c55-b6b25cb39a40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "2fc49f4c-be0f-4432-876d-effb044039a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (332, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>weight</th><th>bmi</th><th>date</th><th>weight_units</th></tr><tr><td>f64</td><td>f64</td><td>date</td><td>str</td></tr></thead><tbody><tr><td>235.8</td><td>29.47</td><td>2023-08-01</td><td>&quot;pounds&quot;</td></tr><tr><td>236.2</td><td>29.52</td><td>2023-08-02</td><td>&quot;pounds&quot;</td></tr><tr><td>236.8</td><td>29.6</td><td>2023-08-03</td><td>&quot;pounds&quot;</td></tr><tr><td>236.2</td><td>29.52</td><td>2023-08-04</td><td>&quot;pounds&quot;</td></tr><tr><td>236.4</td><td>29.55</td><td>2023-08-05</td><td>&quot;pounds&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>220.4</td><td>27.55</td><td>2024-09-02</td><td>&quot;pounds&quot;</td></tr><tr><td>225.2</td><td>28.15</td><td>2024-09-03</td><td>&quot;pounds&quot;</td></tr><tr><td>224.6</td><td>28.07</td><td>2024-09-04</td><td>&quot;pounds&quot;</td></tr><tr><td>222.2</td><td>27.77</td><td>2024-09-05</td><td>&quot;pounds&quot;</td></tr><tr><td>220.6</td><td>27.57</td><td>2024-09-06</td><td>&quot;pounds&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (332, 4)\n",
+       "┌────────┬───────┬────────────┬──────────────┐\n",
+       "│ weight ┆ bmi   ┆ date       ┆ weight_units │\n",
+       "│ ---    ┆ ---   ┆ ---        ┆ ---          │\n",
+       "│ f64    ┆ f64   ┆ date       ┆ str          │\n",
+       "╞════════╪═══════╪════════════╪══════════════╡\n",
+       "│ 235.8  ┆ 29.47 ┆ 2023-08-01 ┆ pounds       │\n",
+       "│ 236.2  ┆ 29.52 ┆ 2023-08-02 ┆ pounds       │\n",
+       "│ 236.8  ┆ 29.6  ┆ 2023-08-03 ┆ pounds       │\n",
+       "│ 236.2  ┆ 29.52 ┆ 2023-08-04 ┆ pounds       │\n",
+       "│ 236.4  ┆ 29.55 ┆ 2023-08-05 ┆ pounds       │\n",
+       "│ …      ┆ …     ┆ …          ┆ …            │\n",
+       "│ 220.4  ┆ 27.55 ┆ 2024-09-02 ┆ pounds       │\n",
+       "│ 225.2  ┆ 28.15 ┆ 2024-09-03 ┆ pounds       │\n",
+       "│ 224.6  ┆ 28.07 ┆ 2024-09-04 ┆ pounds       │\n",
+       "│ 222.2  ┆ 27.77 ┆ 2024-09-05 ┆ pounds       │\n",
+       "│ 220.6  ┆ 27.57 ┆ 2024-09-06 ┆ pounds       │\n",
+       "└────────┴───────┴────────────┴──────────────┘"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.filter(pl.col('date') >= pl.lit(\"2023-01-01\").str.to_date(\"%Y-%m-%d\"))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7538050b-ad91-49b0-86b6-6e3093fec85d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weight_bounds(df: pl.DataFrame) -> map:\n",
+    "    min_wt = df.select(pl.min('weight')).item()\n",
+    "    max_wt = df.select(pl.max('weight')).item()\n",
+    "    mean_wt = df.select(pl.mean('weight')).item()\n",
+    "    return {\n",
+    "        'starting_date': df.select(pl.min('date').dt.to_string(\"iso\")).item(),\n",
+    "        'ending_date': df.select(pl.max('date').dt.to_string(\"iso\")).item(),\n",
+    "        'min_wt': min_wt,\n",
+    "        'min_wt_date': df.filter(pl.col('weight') == min_wt).select(pl.max('date').dt.to_string(\"iso\")).item(),\n",
+    "        'max_wt': max_wt,\n",
+    "        'max_wt_date': df.filter(pl.col('weight') == max_wt).select(pl.max('date').dt.to_string(\"iso\")).item(),\n",
+    "        'mean_wt': mean_wt,\n",
+    "        'weight_units': df.select('weight_units').item(0, 0)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f524b162-8a0d-4d18-82dc-bb3c021eb35e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'starting_date': '2023-08-01',\n",
+       " 'ending_date': '2024-09-06',\n",
+       " 'min_wt': 211.6,\n",
+       " 'min_wt_date': '2024-07-31',\n",
+       " 'max_wt': 237.4,\n",
+       " 'max_wt_date': '2023-08-10',\n",
+       " 'mean_wt': 222.7343373493976,\n",
+       " 'weight_units': 'pounds'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bounds = weight_bounds(df)\n",
+    "bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bf767f8c-efb7-4e51-89a8-1e4fc483ec69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "220.6"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.filter(pl.col('date') == pl.max('date')).select('weight').item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "33a18455-f802-4a7a-8d9c-d2d31adf48ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "latest weight: 220.6 pounds on 2024-09-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "latest_weight = df.filter(pl.col('date') == pl.max('date')).select('weight').item()\n",
+    "print(f\"latest weight: {latest_weight} {bounds['weight_units']} on {bounds['ending_date']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "12923c1a-3100-400f-a06c-29861c6c620b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleUpgradeRequiredError",
+     "evalue": "altair>=5.4.0 is required for `.plot`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleUpgradeRequiredError\u001b[0m                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cf/h8l4xxzs0bvd7s6nz8s_xgy40000gn/T/ipykernel_82834/2909785881.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'pounds'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'line'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mweight_bounds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/src/fitbit/fitbit_data_viewer/.venv/lib/python3.13/site-packages/polars/_utils/unstable.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0;34m@\u001b[0m\u001b[0mwraps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m             \u001b[0missue_unstable_warning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"\u001b[0m\u001b[0;34m`\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m` is considered unstable.\u001b[0m\u001b[0;34m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/src/fitbit/fitbit_data_viewer/.venv/lib/python3.13/site-packages/polars/dataframe/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    702\u001b[0m         \u001b[0;34m>>\u001b[0m\u001b[0;34m>\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"day\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"value\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"group\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# doctest: +SKIP\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m         \"\"\"\n\u001b[1;32m    704\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0m_ALTAIR_AVAILABLE\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mparse_version\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maltair\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    705\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"altair>=5.4.0 is required for `.plot`\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 706\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mModuleUpgradeRequiredError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    707\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mDataFramePlot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleUpgradeRequiredError\u001b[0m: altair>=5.4.0 is required for `.plot`"
+     ]
+    }
+   ],
+   "source": [
+    "ax = df.plot(x='date', y='pounds', kind='line')\n",
+    "bounds = weight_bounds(df)\n",
+    "\n",
+    "# Labels\n",
+    "plt.suptitle(\"Daily Weight\")\n",
+    "plt.title(f\"{bounds['starting_date']} - {bounds['ending_date']}\", fontsize=10)\n",
+    "plt.ylabel('pounds')\n",
+    "\n",
+    "# Upper/Lower Bounds\n",
+    "ax.axhline(y=bounds['max_wt'], color='red')\n",
+    "plt.text(bounds['ending_date'], bounds['max_wt'], f\"max weight: {bounds['max_wt']:.0f}\", ha='right', va='bottom')\n",
+    "ax.axhline(y=bounds['mean_wt'], color='blue')\n",
+    "plt.text(bounds['starting_date'], bounds['mean_wt'], f\"mean weight: {bounds['mean_wt']:.0f}\", ha='left', va='bottom')\n",
+    "ax.axhline(y=bounds['min_wt'], color='green')\n",
+    "plt.text(bounds['ending_date'], bounds['min_wt'], f\"min weight: {bounds['min_wt']:.0f}\", ha='right', va='bottom')\n",
+    "\n",
+    "# Shows Latest Weight on plot\n",
+    "plt.text(bounds['ending_date'], bounds['mean_wt'] - ((bounds['mean_wt'] - bounds['min_wt']) / 2), f\"latest weight: {latest_weight:.0f}\", ha='left', va='bottom')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da4b850e-dd26-47b9-8933-d22283f20676",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -363,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
